# iaa

./: .gitignore  IAA_Feedback_System_IEEE_Report.html  IAA_Feedback_System_Presentation.html  IAA_Feedback_System_Presentation.pptx  PRODUCTION_DEPLOYMENT_GUIDE.md  Procfile  UX.excalidraw  build-production.sh  check_schema.py  clean-backend-logs.py  clear_database_data.py  clear_db_direct.py  cloud_database_manager.py  docker-compose.production.yml  optimize-for-production.js  package-lock.json  pyproject.toml  railway.json  render.yaml  requirements.txt  structure.txt  test-email-system.py  verify-production.py  working_backend.py
iaa-feedback-system/: package-lock.json  package.json
